--- a/src/templates/evm-form.html
+++ b/src/templates/evm-form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{CHAIN}} Transfer - Emergency Escape Tool</title>
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico">
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/styles.css">
     <script>
         function toggleTokenInput() {
