--- a/src/templates/solana-form.html
+++ b/src/templates/solana-form.html
@@ -40,8 +40,8 @@
             </div>
             
             <div class="form-group token-input" id="tokenInput">
-                <label for="mintAddress">SPL Token Mint Address:</label>
-                <input type="text" name="mintAddress" placeholder="Enter SPL token mint address">
+                <label for="mintAddress">SPL Token Address:</label>
+                <input type="text" name="mintAddress" placeholder="Enter SPL token address">
             </div>
             
             <div class="form-group">
