BSC changed name, more clean services code, update window script

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -22,7 +22,7 @@
                     <option value="">Choose a blockchain...</option>
                     <option value="Solana">Solana</option>
                     <option value="Base">Base</option>
-                    <option value="BSC">Binance Smart Chain (BSC)</option>
+                    <option value="BNB_Chain">BNB Chain (BNB)</option>
                     <option value="xLayer">xLayer</option>
                 </select>
             </div>
