--- a/src/templates/confirm-transaction.html
+++ b/src/templates/confirm-transaction.html
@@ -31,11 +31,11 @@
                 <span class="detail-value">{{RECIPIENT}}</span>
             </div>
             <div class="detail-row">
-                <span class="detail-label">Amount:</span>
+                <span class="detail-label">Transfer Amount:</span>
                 <span class="detail-value">{{AMOUNT}} {{UNIT}}</span>
             </div>
             <div class="detail-row">
-                <span class="detail-label">Balance Info:</span>
+                <span class="detail-label">AA Wallet Balance:</span>
                 <span class="detail-value">{{BALANCE_INFO}}</span>
             </div>
             <div class="detail-row">
