--- a/src/templates/solana-form.html
+++ b/src/templates/solana-form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solana Transfer - Emergency Escape Tool</title>
+    <title>Solana Transfer - Wallet Release</title>
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="/styles.css">
     <script>
