add AA address and EOA address in confirmation page

--- a/src/templates/confirm-transaction.html
+++ b/src/templates/confirm-transaction.html
@@ -27,6 +27,14 @@
             </div>
             {{TOKEN_ADDRESS_ROW}}
             <div class="detail-row">
+                <span class="detail-label">AA Wallet Address:</span>
+                <span class="detail-value">{{AA_WALLET_ADDRESS}}</span>
+            </div>
+            <div class="detail-row">
+                <span class="detail-label">Sender Address:</span>
+                <span class="detail-value">{{SENDER_ADDRESS}}</span>
+            </div>
+            <div class="detail-row">
                 <span class="detail-label">Recipient:</span>
                 <span class="detail-value">{{RECIPIENT}}</span>
             </div>
